--- a/OnlineShop/package.json
+++ b/OnlineShop/package.json
@@ -1,7 +1,6 @@
 {
   "name": "npm-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +25,6 @@
   },
   "dependencies": {
     "del": "^5.1.0"
-  }
+  },
+  "description": ""
 }
